chore(notification): init service

--- a/.env.template
+++ b/.env.template
@@ -30,3 +30,5 @@ MONGO_EXPRESS_PAYMENTS_PORT=9051
 STRIPE_SECRET_KEY=
 STRIPE_PUBLISHABLE_KEY=
 STRIPE_WEBHOOK_SECRET=
+NOTIFICATIONS_SERVICE_PORT=9060
+MONGO_EXPRESS_NOTIFICATIONS_PORT=9061
