--- a/services/notifications/package.json
+++ b/services/notifications/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.0.0",
     "socket.io": "^4.6.1"
   },
@@ -33,6 +34,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.10.0",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
