--- a/services/chat/docker-compose.yaml
+++ b/services/chat/docker-compose.yaml
@@ -23,6 +23,8 @@ services:
         condition: service_healthy
       rabbitmq:
         condition: service_healthy
+      users:
+        condition: service_healthy
 
   mongo-chat:
     image: mongo
