chore(createEvent): add POST internal/events/:eventId route to be used internally to create events

--- a/services/payments/docker-compose.yaml
+++ b/services/payments/docker-compose.yaml
@@ -16,7 +16,7 @@ services:
       - AUTH_PUBLIC_KEY_URL=http://users:${USERS_SERVICE_PORT}/public-keys
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.payments.rule=Host(`payments.${HOST}`)"
+      - "traefik.http.routers.payments.rule=Host(`payments.${HOST}`) && !PathPrefix(`/internal`)"
       - "traefik.http.routers.payments.entrypoints=web"
       - "traefik.http.services.payments.loadbalancer.server.port=${PAYMENTS_SERVICE_PORT}"
       - "traefik.docker.network=${COMPOSE_PROJECT_NAME}_eventonight-network"
