--- a/docs/openAPI/openapi/payments.yaml
+++ b/docs/openAPI/openapi/payments.yaml
@@ -30,10 +30,78 @@ paths:
       tags:
         - Health
 
+  /internal/events/{eventId}:
+    post:
+      summary: Create an event (Internal)
+      description: |
+        Creates an event in the payments service.
+
+        **🔒 INTERNAL ENDPOINT**: This endpoint is only accessible to internal microservices.
+        It is blocked from external access by Traefik.
+      parameters:
+        - name: eventId
+          in: path
+          required: true
+          description: ID of the event
+          schema:
+            type: string
+          example: evt_550e8400-e29b-41d4-a716-446655440000
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateEventDto'
+            example:
+              creatorId: "usr_123e4567-e89b-12d3-a456-426614174000"
+              date: "2024-12-31T20:00:00Z"
+              title: "New Year's Eve Party"
+              status: "PUBLISHED"
+      responses:
+        '201':
+          description: Event created successfully
+        '400':
+          description: Bad Request - Invalid input data
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+              example:
+                statusCode: 400
+                message: status must be one of DRAFT, PUBLISHED, COMPLETED, CANCELLED
+                error: Bad Request
+        '409':
+          description: Conflict - Event with this ID already exists
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+              example:
+                statusCode: 409
+                message: Event with id evt_550e8400-e29b-41d4-a716-446655440000 already exists
+                error: Conflict
+        '500':
+          description: Internal Server Error - Failed to create or update event
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+              example:
+                statusCode: 500
+                message: Failed to create or update event
+                error: Internal Server Error
+      tags:
+        - Event Internal
+        
   /events/{eventId}:
     post:
       summary: Create an event
-      description: Creates an event in the payments service
+      description: |
+        Creates an event in the payments service.
+
+        **⚠️ DEPRECATED**: This endpoint is deprecated and will be removed in a future version.
+        Use `/internal/events/{eventId}` instead for internal microservice communication.
+      deprecated: true
       parameters:
         - name: eventId
           in: path
