build(notification): add service as a gradle subproject

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -36,6 +36,7 @@ jobs:
             services/interactions/coverage/lcov.info
             services/chat/coverage/lcov.info
             services/payments/coverage/lcov.info
+            services/notifications/coverage/lcov.info
           flags: unittests
           fail_ci_if_error: true
       
