--- a/services/notifications/package.json
+++ b/services/notifications/package.json
@@ -7,12 +7,14 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "tsc",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "npm run build && node dist/index.js",
     "start:dev": "ts-node src/index.ts",
     "dev": "nodemon --watch src --exec ts-node src/index.ts",
     "lint": "eslint \"{src,test}/**/*.ts\"",
     "lint:fix": "eslint \"{src,test}/**/*.ts\" --fix",
     "test": "jest",
+    "test:cov": "jest --coverage",
     "test:watch": "jest --watch"
   },
   "dependencies": {
