chore(payments-seed): implement events payment seed

--- a/infrastructure/seed/docker-compose.yaml
+++ b/infrastructure/seed/docker-compose.yaml
@@ -17,6 +17,7 @@ services:
       - EVENT_MONGO_URI=${COMPOSE_PROJECT_NAME}-mongo-events-1
       - INTERACTIONS_MONGO_URI=${COMPOSE_PROJECT_NAME}-mongo-interactions-1
       - CHAT_MONGO_URI=${COMPOSE_PROJECT_NAME}-mongo-chat-1
+      - PAYMENT_MONGO_URI=${COMPOSE_PROJECT_NAME}-mongo-payments-1
 
 networks:
   eventonight-network:
