chore(payments-seed): refactor after copilot reviews

--- a/infrastructure/seed/tsconfig.json
+++ b/infrastructure/seed/tsconfig.json
@@ -5,6 +5,6 @@
     "moduleResolution": "node",
     "strict": true,
     "esModuleInterop": true,
-    "skipLibCheck": true,
+    "skipLibCheck": true
   }
 }
