--- a/docs/openAPI/openapi/users.yaml
+++ b/docs/openAPI/openapi/users.yaml
@@ -375,6 +375,7 @@ paths:
         Deletes the avatar of the authenticated user.
         The userId in the path must match the user_id claim in the access token.
         The avatar is reset to the default image.
+        On success, a UserUpdated domain event is published.
       servers:
         - url: http://localhost:9000
           description: Users service (local development)
@@ -392,7 +393,7 @@ paths:
             format: uuid
       responses:
         '204':
-          description: Avatar deleted successfully
+          description: Avatar successfully deleted and reset to default
         '400':
           description: Bad request or update failed
           content:
