--- a/services/payments/package.json
+++ b/services/payments/package.json
@@ -47,7 +47,7 @@
     "qrcode": "^1.5.4",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "stripe": "^20.1.2",
+    "stripe": "20.1.2",
     "jsonwebtoken": "^9.0.3"
   },
   "devDependencies": {
