--- a/services/frontend/package.json
+++ b/services/frontend/package.json
@@ -25,6 +25,7 @@
     "@quasar/extras": "^1.17.0",
     "pinia": "^3.0.3",
     "quasar": "^2.18.6",
+    "socket.io-client": "^4.8.1",
     "vue": "^3.5.22",
     "vue-advanced-cropper": "^2.8.9",
     "vue-i18n": "^9.14.5",
@@ -49,7 +50,7 @@
     "jiti": "^2.6.1",
     "npm-run-all2": "^8.0.4",
     "prettier": "^3.6.2",
-    "prettier-eslint": "^16.4.2",
+    "prettier-eslint": "^1.0.1",
     "sass": "^1.94.0",
     "sass-embedded": "^1.93.3",
     "typescript": "~5.9.0",
