build(frontend): install git in frontend image to fix build problems

--- a/services/frontend/Dockerfile
+++ b/services/frontend/Dockerfile
@@ -2,6 +2,7 @@ FROM node:25-alpine3.22 AS builder
 WORKDIR /home/app
 
 COPY ./services/frontend/package.json ./
+RUN apk add --no-cache git
 RUN npm install --include=dev
 COPY ./services/frontend .
 
