--- a/services/frontend/package.json
+++ b/services/frontend/package.json
@@ -16,7 +16,7 @@
     "dev-prod:organizationView": "VITE_AUTO_LOGIN=true VITE_DEV_EMAIL=organization_1@example.com VITE_DEV_PASSWORD=password123 VITE_DEV_ROLE=organization npm run dev-prod",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
-    "build-only": "vite build",
+    "build-only": "vite build && node scripts/generate-locale-html.js",
     "type-check": "vue-tsc --build",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
