--- a/docs/openAPI/openapi/notifications.yaml
+++ b/docs/openAPI/openapi/notifications.yaml
@@ -63,6 +63,31 @@ paths:
           description: Unauthorized - Authentication is required.
         '500':
           description: Internal Server Error - An error occurred on the server.
+  
+  /unread-count:
+    get:
+      summary: Get Unread Notifications Count
+      description: Retrieve the count of unread notifications for the authenticated user.
+      security:
+        - BearerAuth: []
+      servers:
+        - url: http://localhost:9060/ 
+          description: Local development server
+      responses:
+        '200':
+          description: The count of unread notifications for an authenticated user.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  count:
+                    type: integer
+                    description: The number of unread notifications.
+        '401':
+          description: Unauthorized - Authentication is required.
+        '500':    
+          description: Internal Server Error - An error occurred on the server.
 
 components:
   securitySchemes:
