feat(keycloak): add env-based password policy provisioning and password error handling

--- a/infrastructure/authentication/docker-compose-dev.yaml
+++ b/infrastructure/authentication/docker-compose-dev.yaml
@@ -10,3 +10,4 @@ services:
         dockerfile: ./infrastructure/authentication/Dockerfile-keycloak-provision
       environment:
         USERS_SERVICE_SECRET: "supersecret"
+        ENV_MODE: "dev"
